[package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "daemon program by sub-process"
edition = "2018"
license-file = "LICENSE"
name = "daemon_ctrl"
readme = "./README.md"
repository = "https://github.com/rise0chen/daemon_ctrl.git"
version = "0.1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"

[target.'cfg(unix)'.dependencies]
fork = "0.1"
