[package]
authors = ["rise0chen <rise0chen@163.com>"]
description = "daemon program by sub-process"
edition = "2018"
license-file = "LICENSE"
name = "daemon_ctrl"
readme = "./README.md"
repository = "https://github.com/rise0chen/daemon_ctrl.git"
version = "0.1.4"

[dependencies]
log = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
will_exit = "0.1"

[target.'cfg(unix)'.dependencies]
fork = "0.1"

[dev-dependencies]
simple_logger = "1.16.0"
